--- a/css/framework.css
+++ b/css/framework.css
@@ -52,7 +52,6 @@
 .col-11 { flex-basis: calc((100% / 12) * 11); max-width: calc((100% / 12) *  11);  }
 .col-12 { flex-basis: calc((100% / 12) * 12); max-width: calc((100% / 12) *  12);  }
 
-.col-offset-1 { margin-left: calc((100% / 12) * 1); }
 .col-offset-2 { margin-left: calc((100% / 12) * 2); }
 .col-offset-3 { margin-left: calc((100% / 12) * 3); }
 .col-offset-4 { margin-left: calc((100% / 12) * 4); }
@@ -63,28 +62,85 @@
 .col-offset-9 { margin-left: calc((100% / 12) * 9); }
 .col-offset-10 { margin-left: calc((100% / 12) * 10); }
 .col-offset-11 { margin-left: calc((100% / 12) * 11); }
-.col-offset-12 { margin-left: calc((100% / 12) * 12); }
 
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
+    .col-offset-5 { margin-left: calc((100% / 12) * 5); }
+    .col-offset-6 { margin-left: calc((100% / 12) * 6); }
+    .col-offset-7 { margin-left: calc((100% / 12) * 7); }
+    .col-offset-8 { margin-left: calc((100% / 12) * 8); }
+    .col-offset-9 { margin-left: calc((100% / 12) * 9); }
+    .col-offset-10 { margin-left: calc((100% / 12) * 10); }
+    .col-offset-11 { margin-left: calc((100% / 12) * 11); }
+    .col-offset-2 {
+        margin-right: calc((100% / 12) * 2);
+        margin-left: 0; }
+   .col-offset-3 {
+        margin-right: calc((100% / 12) * 3);
+        margin-left: 0; }
+   .col-offset-4 { 
+       margin-right: calc((100% / 12) * 4); 
+       margin-left: 0;}
+}
+
+@media screen and (max-width: 576px) {
+    .col-offset-2 {
+        margin-right: calc((100% / 12) * 2);
+        margin-left: 0; }
+   .col-offset-3 {
+        margin-right: calc((100% / 12) * 3);
+        margin-left: 0; }
+   .col-offset-4 { 
+       margin-right: calc((100% / 12) * 4); 
+       margin-left: 0;}
+   .col-offset-5 { 
+       margin-right: calc((100% / 12) * 5); 
+       margin-left: 0;}
+   .col-offset-6 { 
+       margin-right: calc((100% / 12) * 6); 
+       margin-left: 0;}
+   .col-offset-7 {
+        margin-right: calc((100% / 12) * 7); 
+        margin-left: 0;}
+   .col-offset-8 {
+        margin-right: calc((100% / 12) * 8);
+        margin-left: 0; }
+
+    .col-offset-9 { margin-left: calc((100% / 12) * 9); }
+    .col-offset-10 { margin-left: calc((100% / 12) * 10); }
+    .col-offset-11 { margin-left: calc((100% / 12) * 11); }
 
 }
 
-@media screen and (min-width: 576px) {
-
-}
-
-@media screen and (min-width: 480px) {
-    .col-xl-1 {    flex-basis: calc((100% / 12) *  1); max-width: calc((100% / 12) *  1);  }
-    .col-xl-2 {    flex-basis: calc((100% / 12) *  2); max-width: calc((100% / 12) *  2);  }
-    .col-xl-3 {    flex-basis: calc((100% / 12) *  3); max-width: calc((100% / 12) *  3);  }
-    .col-xl-4 {    flex-basis: calc((100% / 12) *  4); max-width: calc((100% / 12) *  4);  }
-    .col-xl-5 {    flex-basis: calc((100% / 12) *  5); max-width: calc((100% / 12) *  5);  }
-    .col-xl-6 {    flex-basis: calc((100% / 12) *  6); max-width: calc((100% / 12) *  6);  }
-    .col-xl-7 {    flex-basis: calc((100% / 12) *  7); max-width: calc((100% / 12) *  7);  }
-    .col-xl-8 {    flex-basis: calc((100% / 12) *  8); max-width: calc((100% / 12) *  8);  }
-    .col-xl-9 {    flex-basis: calc((100% / 12) *  9); max-width: calc((100% / 12) *  9);  }
-    .col-xl-10 {   flex-basis: calc((100% / 12) * 10); max-width: calc((100% / 12) *  10);  }
-    .col-xl-11 {   flex-basis: calc((100% / 12) * 11); max-width: calc((100% / 12) *  11);  }
-    .col-xl-12 {   flex-basis: calc((100% / 12) * 12); max-width: calc((100% / 12) *  12);  }
+@media screen and (max-width: 480px) {
+    .col-offset-2 {
+         margin-right: calc((100% / 12) * 2);
+         margin-left: 0; }
+    .col-offset-3 {
+         margin-right: calc((100% / 12) * 3);
+         margin-left: 0; }
+    .col-offset-4 { 
+        margin-right: calc((100% / 12) * 4); 
+        margin-left: 0;}
+    .col-offset-5 { 
+        margin-right: calc((100% / 12) * 5); 
+        margin-left: 0;}
+    .col-offset-6 { 
+        margin-right: calc((100% / 12) * 6); 
+        margin-left: 0;}
+    .col-offset-7 {
+         margin-right: calc((100% / 12) * 7); 
+         margin-left: 0;}
+    .col-offset-8 {
+         margin-right: calc((100% / 12) * 8);
+         margin-left: 0; }
+    .col-offset-9 { 
+        margin-right: calc((100% / 12) * 9);
+        margin-left: 0; }
+    .col-offset-10 {
+        margin-right: calc((100% / 12) * 10);
+        margin-left: 0; }
+    .col-offset-11 { 
+        margin-right: calc((100% / 12) * 11); 
+        margin-left: 0;}
 }
